# mlir-dialect-ruby

./: .gitignore  .gitmodules  .rubocop.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Gemfile  LICENSE.txt  README.md  Rakefile  TODO.md  mlir-dialect-ruby.gemspec
ext/llvm-project.build/: configure.sh
ext/mlir-ruby/: CMakeLists.txt  README.md
ext/mlir-ruby/include/: CMakeLists.txt
ext/mlir-ruby/include/Ruby/: CMakeLists.txt  RubyDialect.td  RubyOps.td  RubyPasses.td  RubyPatterns.td  RubyTypes.h  RubyTypes.td
ext/mlir-ruby/include/Ruby-c/: Dialects.h
ext/mlir-ruby/include/RubyIseq/: CMakeLists.txt  RubyIseqDialect.h  RubyIseqOps.h  RubyIseqOps.td  RubyIseqPasses.h  RubyIseqPasses.td  RubyIseqTypes.td
ext/mlir-ruby/include/RubyIseq-c/: Dialects.h
ext/mlir-ruby/lib/: CMakeLists.txt
ext/mlir-ruby/lib/CAPI/: CMakeLists.txt  Dialects.cpp
ext/mlir-ruby/lib/CAPI-iseq/: Dialects.cpp
ext/mlir-ruby/lib/Ruby/: CMakeLists.txt  RubyDialect.cpp  RubyOps.cpp  RubyPasses.cpp
ext/mlir-ruby/lib/RubyIseq/: RubyIseqDialect.cpp  RubyIseqPasses.cpp
ext/mlir-ruby/ruby-opt/: ruby-opt.cpp
ext/mlir-ruby/ruby-plugin/: CMakeLists.txt
ext/mlir-ruby/ruby-translate/: ruby-translate.cpp
ext/mlir-ruby/rubyiseq-opt/: rubyiseq-opt.cpp
ext/mlir-ruby/rubyiseq-plugin/: CMakeLists.txt
ext/mlir-ruby/rubyiseq-translate/: CMakeLists.txt
ext/mlir-ruby/test-all/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
ext/mlir-ruby/test-all/CAPI/: CMakeLists.txt  ruby-all-capi-test.c
ext/mlir-ruby/test-iseq/: lit.cfg.py  lit.site.cfg.py.in
ext/mlir-ruby/test-iseq/CAPI/: rubyiseq-capi-test.c
ext/mlir-ruby/test-iseq/RubyIseq/: rubyiseq-pass-plugin.mlir  rubyiseq-plugin.mlir  rubyiseq-translate.mlir
ext/mlir-ruby/test-iseq/python/: smoketest.py
ext/mlir-ruby/test/CAPI/: CMakeLists.txt  ruby-capi-test.c
ext/mlir-ruby/test/Ruby/: call-to-arith.mlir  const-folding.mlir  dummy.mlir  ruby-pass-plugin.mlir  ruby-plugin.mlir
ext/mlir-rubyiseq/: CMakeLists.txt  README.md
ext/mlir-rubyiseq/include/: CMakeLists.txt
ext/mlir-rubyiseq/include/RubyIseq/: RubyIseqDialect.td  RubyIseqOps.td  RubyIseqPasses.td  RubyIseqTypes.h  RubyIseqTypes.td
ext/mlir-rubyiseq/lib/: CMakeLists.txt
ext/mlir-rubyiseq/lib/CAPI/: CMakeLists.txt  Dialects.cpp
ext/mlir-rubyiseq/lib/RubyIseq/: CMakeLists.txt  RubyIseqOps.cpp  RubyIseqTypes.cpp
ext/mlir-rubyiseq/python/: CMakeLists.txt  RubyIseqExtension.cpp
ext/mlir-rubyiseq/python/mlir_rubyiseq/dialects/: RubyIseqOps.td  rubyiseq.py
ext/mlir-rubyiseq/rubyiseq-opt/: CMakeLists.txt
ext/mlir-rubyiseq/rubyiseq-plugin/: rubyiseq-plugin.cpp
ext/mlir-rubyiseq/rubyiseq-translate/: rubyiseq-translate.cpp
ext/mlir-rubyiseq/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
ext/mlir-rubyiseq/test/CAPI/: CMakeLists.txt
ext/mlir-rubyiseq/test/RubyIseq/: dummy.mlir  rubyiseq-opt.mlir
ext/standalone/: CMakeLists.txt
ext/standalone/include/: CMakeLists.txt
ext/standalone/include/Ruby/: RubyDialect.h  RubyDialect.td  RubyOps.h  RubyOps.td  RubyPasses.h  RubyPasses.td  RubyTypes.h  RubyTypes.td
ext/standalone/lib/Ruby/: RubyOps.cpp  RubyTypes.cpp
ext/standalone/python/: CMakeLists.txt  RubyExtension.cpp
ext/standalone/python/mlir_ruby/dialects/: RubyOps.td  ruby.py
ext/standalone/ruby-opt/: CMakeLists.txt
ext/standalone/ruby-plugin/: ruby-plugin.cpp
ext/standalone/ruby-translate/: CMakeLists.txt  ruby-translate.cpp
ext/standalone/test/: CMakeLists.txt  lit.cfg.py
ext/standalone/test/CAPI/: CMakeLists.txt
ext/standalone/test/Ruby/: dummy.mlir  ruby-opt.mlir  ruby-translate.mlir
ext/standalone/test/python/: smoketest.py
lib/mlir/dialect/: ruby.rb
lib/mlir/dialect/ruby/: capi.rb  optimizer.rb  prism_loader.rb  prism_optimizer.rb  version.rb
sig/mlir/dialect/: ruby.rbs
test/: test_helper.rb
test/mlir/dialect/: test_const_folding.rb  test_prism_loader.rb  test_ruby.rb
